[release-later] `enable-native-access` for tests